# aoc2022

day-01/: Main.hs
day-02/: Main.hs
day-03/: Main.hs  solution.cabal
day-04/: Main.hs
day-05/: Main.hs
day-06/: Main.hs
day-07/: Main.hs
day-08/: Main.hs
day-09/: Main.hs
day-10/: Main.hs  flake.nix
day-11/: Main.hs
day-12/: Main.hs  solution.cabal
day-13/: Main.hs
day-14/: Main.hs
day-15/: Main.hs  solution.cabal
day-16/: Main.hs
day-17/: Main.hs
day-18/: Main.hs  hie.yaml
day-19/: Main.hs
day-20/: Main.hs
day-21/: Main.hs
day-22/: Main.hs
day-23/: Main.hs
day-24/: Main.hs  solution.cabal
day-25/: Main.hs
day-template/: Main.hs  flake.nix  solution.cabal
