cabal-version:      2.4
name:               solution
version:            0.0.1.0

executable solution
    main-is:          Main.hs
    build-depends:    base, parsec, text, matrix, containers, heaps, parsec-numbers
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        ScopedTypeVariables
        NamedFieldPuns
        TupleSections
